@@ -8,7 +8,7 @@ AM_CONFIG_HEADER(config.h)
 AC_SUBST(VERSION)
 
 AC_DEFINE([BUILD_RELEASE], [], [The build release number])
-AC_DEFINE_UNQUOTED(BUILD_RELEASE, "180")
+AC_DEFINE_UNQUOTED(BUILD_RELEASE, "179")
 
 
 
